@@ -1,3 +1,12 @@
+2002-12-27  Christopher Faylor  <cgf@redhat.com>
+
+	* fhandler.h (fhandler_tty_master::set_winsize): Declare new function.
+	* fhandler_console.cc (fhandler_console::send_winch_maybe): If
+	appropriate, call tty master function to handle screen size change.
+	* fhandler_tty.cc (fhandler_tty_master::set_winsize): New function.
+	(fhandler_tty_master::init): Call set_winsize to set initial screen
+	size.
+
 2002-12-26  Christopher Faylor  <cgf@redhat.com>
 
 	* fhandler_tty.cc (fhandler_tty_master::init): Set initial size of tty
